@@ -6,6 +6,7 @@ import com.typesafe.config.*;
 import sun.misc.Signal;
 
 import java.io.File;
+import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
@@ -86,6 +87,23 @@ public class CordaWebserverCaplet extends Capsule {
         return super.prelaunch(jvmArgs, args);
     }
 
+    // Capsule does not handle multiple instances of same option hence we add in the args here to process builder
+    // For multiple instances Capsule jvm args handling works on basis that one overrides the other.
+    @Override
+    protected int launch(ProcessBuilder pb) throws IOException, InterruptedException {
+        if (isAtLeastJavaVersion11()) {
+            List<String> args = pb.command();
+            List<String> myArgs = Arrays.asList(
+                    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                    "--add-opens=java.base/java.time=ALL-UNNAMED",
+                    "--add-opens=java.base/java.io=ALL-UNNAMED",
+                    "--add-opens=java.base/java.nio=ALL-UNNAMED");
+            args.addAll(1, myArgs);
+            pb.command(args);
+        }
+        return super.launch(pb);
+    }
+
     // Add working directory variable to capsules string replacement variables.
     @Override
     protected String getVarValue(String var) {
@@ -139,6 +157,9 @@ public class CordaWebserverCaplet extends Capsule {
             } catch (ConfigException e) {
                 log(LOG_QUIET, e);
             }
+            if (isAtLeastJavaVersion11()) {
+                jvmArgs.add("-Dnashorn.args=--no-deprecation-warning");
+            }
             return (T) jvmArgs;
         } else if (ATTR_SYSTEM_PROPERTIES == attr) {
             // Add system properties, if specified, from the config.
@@ -179,6 +200,14 @@ public class CordaWebserverCaplet extends Capsule {
             System.err.printf("Error: Unsupported Java version %s; currently only version 1.8 or 11 is supported.\n", version);
             System.exit(1);
         }
+    }
+
+    private static boolean isAtLeastJavaVersion11() {
+        String version = System.getProperty("java.specification.version");
+        if (version != null) {
+            return Float.parseFloat(version) >= 11f;
+        }
+        return false;
     }
 
     private Boolean checkIfCordappDirExists(File dir) {
